hphp/hack/test/typecheck/aktuple/dynamic_index_non_lvalue_error.php.exp
File "dynamic_index_non_lvalue_error.php", line 12, characters 15-19:
Invalid argument (Typing[4110])
  File "dynamic_index_non_lvalue_error.php", line 15, characters 22-27:
  Expected `string`
  File "dynamic_index_non_lvalue_error.php", line 9, characters 12-12:
  But got `int`
